--- a/form.html
+++ b/form.html
@@ -87,7 +87,7 @@ TTL        :<input type="date"name="ttl"-word size="12"max length="12"><br>
 Gender     :<input type="radio"name="gender"value="gender 1">Pria
             <input type="radio"name="gender"value="gender 2">wanita
 Pendidikan 
-Terakhir   :<select name="pend"-word size="30"max length="30">
+Terakhir   :<select name="pend">
             <option value="1">SMP/Sederajat</option>
             <option value="2">SMA/Sederajat</option>
             <option value="3">D3</option>
@@ -95,7 +95,7 @@ Terakhir   :<select name="pend"-word size="30"max length="30">
 		    <option value="4">S2</option>
             </select> 
 
-GolDar     :<select name="goldar"-word size="30"max length="30">
+GolDar     :<select name="goldar">
             <option value="A">A</option>
             <option value="B">B</option>
             <option value="AB">AB</option>
