--- a/biodata.html
+++ b/biodata.html
@@ -35,7 +35,7 @@ nav ul {
 }
 
 article {
-  float: left;
+  float: right;
   padding: 20px;
   width: 65%;
   background-color:#FFE4E1;
@@ -108,36 +108,32 @@ alt = "image/oyen.jpg" width = "350" height "200"/>
 2. NIM        : D1041171009<br>
 3. TTL        : Binjai Hulu, 29-09-1999<br>
 4. Gender     : Perempuan<br>
-5. Hobby      : Eksperimen makanan,bernyanyi,membaca<br>
+5. Hobby      : masak,bernyanyi,membaca<br>
 6. Alamat     : Sungai Raya Dalam Asri, NO.A1<br>
 7. NO HP      : 085350625349<br>
 8. Organisasi :
-		- Pramuka : Siaga aktif
-		            Penggalang Terap
-		            Penegak Laksana
-		            Pradana Putri penegak
+   - Pramuka : Siaga aktif
+	       Penggalang Terap
+	       Penegak Laksana
+	       Pradana Putri penegak
 					
-		- OSIS    : (Bidang Humas, Bendahara)
-		- HMI     : (Bendahara Umum)
+   - OSIS    : (Bidang Humas, Bendahara)
+   - HMI     : (Bendahara Umum)
 9. Pendidikan :
 		- SDN.01 Binjai Hulu
 		- SMPN.01 Binjai Hulu
 		- SMKS Muhammadiyah Sintang
 10. Favorit    :
-	        - makanan    : ayam goreng 
-	        - minuman    : rasa cokelat
-	        - film       : Captain Marvel
-	        - komik Apps : Webtoon, Mangatoon, Webcomics,Ciayo
-	        - buku       : Novel Ther-Melian Academy all series	
-	        - lagu       : YUI-love & truth 
-			       <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
+    - makanan    : ayam goreng 
+    - minuman    : rasa cokelat
+    - film       : Captain Marvel
+    - lagu       : YUI-love & truth 
+      <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
 </h4> </i> </pre>
-
-
 <center><pre>
-
   </article>
 </section>
+	  
 <footer>
   <p>Media Sosial : </p>
   <a href = "https://www.youtube.com/channel/UCx26MnLsnsFPjJpVXHcn3jw"> <i> Youtube </i> </a><br></center>
