--- a/biodata.html
+++ b/biodata.html
@@ -88,9 +88,9 @@ footer {
  <br>
  <h3 style="font-family:Monotype Corsiva;">Biodata Pengunjung Diisi ya:</h3>
 <form><pre>
-nama        :<input type="text"name="phone"size="15"max length="15"><br>
-Perusahaan  :<input type="text"name="secret"-word size="15"max length="15"><br>
-telp/e-mail :<input type="text"name="phone"size="15"max length="15"
+nama        :<input type="text"name="phone"rows="1" cols="10"><br>
+Perusahaan  :<input type="text"name="secret"rows="1" cols="10"><br>
+telp/e-mail :<input type="text"name="phone"rows="1" cols="10">
 </pre></form>
 <input type="submit" value="Submit">
     </ul>
