--- a/biodata.html
+++ b/biodata.html
@@ -22,7 +22,7 @@ header {
 }
 
 nav {
-  float: left;
+  float: right;
   width: 35%;
   height: 900px; 
   background:#F08080;
@@ -120,9 +120,9 @@ alt = "image/oyen.jpg" width = "350" height "200"/>
    - OSIS    : (Bidang Humas, Bendahara)
    - HMI     : (Bendahara Umum)
 9. Pendidikan :
-		- SDN.01 Binjai Hulu
-		- SMPN.01 Binjai Hulu
-		- SMKS Muhammadiyah Sintang
+   - SDN.01 Binjai Hulu
+   - SMPN.01 Binjai Hulu
+   - SMKS Muhammadiyah Sintang
 10. Favorit    :
     - makanan    : ayam goreng 
     - minuman    : rasa cokelat
