--- a/biodata.html
+++ b/biodata.html
@@ -104,31 +104,27 @@ alt = "image/oyen.jpg" width = "350" height "200"/>
 </center>
 
 <pre><i> <h4>
-1. Nama       : Rika Hariyanti<br> 
-2. NIM        : D1041171009<br>
-3. TTL        : Binjai Hulu, 29-09-1999<br>
-4. Gender     : Perempuan<br>
-5. Hobby      : masak,bernyanyi,membaca<br>
-6. Alamat     : Sungai Raya Dalam Asri, NO.A1<br>
-7. NO HP      : 085350625349<br>
-8. Organisasi :
-   - Pramuka : Siaga aktif
-	       Penggalang Terap
-	       Penegak Laksana
-	       Pradana Putri penegak
-					
-   - OSIS    : (Bidang Humas, Bendahara)
-   - HMI     : (Bendahara Umum)
-9. Pendidikan :
+1. Nama      : Rika Hariyanti<br> 
+2. NIM       : D1041171009<br>
+3. TTL       : Binjai Hulu, 29-09-1999<br>
+4. Gender    : Perempuan<br>
+5. Hobby     : bernyanyi,membaca<br>
+6. Alamat    : Serdam Asri, NO.A1<br>
+7. NO HP     : 085350625349<br>
+8. Organisasi:
+   - Pramuka 					
+   - OSIS  
+   - HMI    
+9. Pendidikan:
    - SDN.01 Binjai Hulu
    - SMPN.01 Binjai Hulu
    - SMKS Muhammadiyah Sintang
-10. Favorit    :
-    - makanan    : ayam goreng 
-    - minuman    : rasa cokelat
-    - film       : Captain Marvel
-    - lagu       : YUI-love & truth 
-      <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
+10. Favorit   :
+   - makanan : ayam goreng 
+   - minuman : rasa cokelat
+   - film    : Captain Marvel
+   - lagu    : YUI-love & truth 
+   <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
 </h4> </i> </pre>
 <center><pre>
   </article>
