--- a/form.html
+++ b/form.html
@@ -81,13 +81,13 @@ footer {
   
   <article>
 <form><pre>
-Nama       :<input type="text"name="nama"size="30"max length="30"><br>
-NIK        :<input type="text"name="nim"-word size="30"max length="30"><br>
-TTL        :<input type="date"name="ttl"-word size="12"max length="12"><br>
+Nama       :<input type="text"name="nama"rows="1" cols="10"><br>
+NIK        :<input type="text"name="nim"rows="1" cols="10"><br>
+TTL        :<input type="date"name="ttl"rows="1" cols="10"><br>
 Gender     :<input type="radio"name="gender"value="gender 1">Pria
             <input type="radio"name="gender"value="gender 2">wanita
 Pendidikan 
-Terakhir   :<select name="pend">
+Terakhir   :<select name="pend"rows="1" cols="10">
             <option value="1">SMP/Sederajat</option>
             <option value="2">SMA/Sederajat</option>
             <option value="3">D3</option>
@@ -95,15 +95,15 @@ Terakhir   :<select name="pend">
 		    <option value="4">S2</option>
             </select> 
 
-GolDar     :<select name="goldar">
+GolDar     :<select name="goldar"rows="1" cols="10">
             <option value="A">A</option>
             <option value="B">B</option>
             <option value="AB">AB</option>
             <option value="O">O</option>
             </select> 
-Hobby      :<input type="text"name="hobby"-word size="30"max length="30"><br>
-Alamat     :<input type="text"name="alamat"-word size="30"max length="30"><br>
-No HP      :<input type="text"name="phone"size="30"max length="30"
+Hobby      :<input type="text"name="hobby"rows="1" cols="10"><br>
+Alamat     :<input type="text"name="alamat"rows="1" cols="10"><br>
+No HP      :<input type="text"name="phone"rows="1" cols="10">
 
 </pre></form>
  <input type="submit" value="Submit"> <input type="Reset" value="Reset">
