--- a/thanks.html
+++ b/thanks.html
@@ -84,10 +84,10 @@ footer {
 <img src = "image/thanks.jpg"
 alt = "image/thanks.jpg" width = "250" height "200"/>
 </center>
-<center><pre>
+<center>
 <h3 style="font-family:Monotype Corsiva;">Terimakasih sudah berkunjung kesini ya,
 jangan lupa hubungi kontak saya apabila ada pekerjaan yang cocok untuk saya.
-</h3></pre>
+</h3>
 <marquee> <b><h3 style="font-family:Monotype Corsiva;">Thankyou :)</h3> </b> </marquee>
 <center>
 
