--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ header {
   color: white;
 }
 nav {
-  float: left;
+  float: right;
   width: 20%;
   height: 360px; 
   background:#F08080;
@@ -30,7 +30,7 @@ nav ul {
   padding: 0;
 }
 article {
-  float: left;
+  float: right;
   padding: 20px;
   width: 80%;
   background-color:#FFE4E1;
