--- a/form.html
+++ b/form.html
@@ -81,9 +81,9 @@ footer {
   
   <article>
 <form><pre>
-Nama       :<input type="text"name="nama"rows="1" cols="10"><br>
-NIK        :<input type="text"name="nim" rows="1" cols="10"><br>
-TTL        :<input type="date"name="ttl" rows="1" cols="10"><br>
+Nama       :<input type="text"name="nama"rows="1" cols="10">
+NIK        :<input type="text"name="nim" rows="1" cols="10">
+TTL        :<input type="date"name="ttl">
 Gender     :<input type="radio"name="gender"value="gender 1">Pria
             <input type="radio"name="gender"value="gender 2">wanita
 Pendidikan 
@@ -101,8 +101,8 @@ GolDar     :<select name="goldar" rows="1" cols="10">
             <option value="AB">AB</option>
             <option value="O">O</option>
             </select> 
-Hobby      :<input type="text"name="hobby"rows="1" cols="10"><br>
-Alamat     :<input type="text"name="alamat"rows="1" cols="10"><br>
+Hobby      :<input type="text"name="hobby"rows="1" cols="10">
+Alamat     :<input type="text"name="alamat"rows="1" cols="10">
 No HP      :<input type="text"name="phone"rows="1" cols="10">
 
 </pre></form>
