--- a/form.html
+++ b/form.html
@@ -95,13 +95,12 @@ Terakhir   :<select name="pend" rows="1" cols="10"><br>
 	    <option value="5">S2</option>
             </select> 
 
-GolDar     :<select name="goldar" rows="1" cols="10"><br>
+GolDar     :<select name="goldar" rows="1" cols="10">
             <option value="A">A</option>
             <option value="B">B</option>
             <option value="AB">AB</option>
             <option value="O">O</option>
-            </select> 
-	    <br>
+            </select> <br>
 Hobby      :<input type="text"name="hobby"rows="1" cols="10"><br>
 Alamat     :<input type="text"name="alamat"rows="1" cols="10"><br>
 No HP      :<input type="text"name="phone"rows="1" cols="10"><br>
