--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@ header {
 nav {
   float: right;
   width: 20%;
-  height: 450px; 
+  height: 480px; 
   background:#F08080;
   padding: 20px;
 }
@@ -39,7 +39,7 @@ article {
   padding: 20px;
   width: 80%;
   background-color:#FFE4E1;
-  height: 450px;
+  height: 480px;
 }
 
 section:after {
@@ -95,12 +95,12 @@ Terakhir   :<select name="pend" rows="1" cols="10"><br>
 	    <option value="5">S2</option>
             </select> 
 
-GolDar     :<select name="goldar" rows="1" cols="10">
-            <option value="A">A</option>
-            <option value="B">B</option>
-            <option value="AB">AB</option>
-            <option value="O">O</option>
-            </select> <br>
+GolDar     :<select name="goldar" rows="1" cols="10"> <br>
+            <option value=" A ">A</option>
+            <option value=" B ">B</option>
+            <option value=" AB ">AB</option>
+            <option value=" O ">O</option>
+            </select>
 Hobby      :<input type="text"name="hobby"rows="1" cols="10"><br>
 Alamat     :<input type="text"name="alamat"rows="1" cols="10"><br>
 No HP      :<input type="text"name="phone"rows="1" cols="10"><br>
