--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@ header {
 nav {
   float: right;
   width: 20%;
-  height: 480px; 
+  height: 490px; 
   background:#F08080;
   padding: 20px;
 }
@@ -39,7 +39,7 @@ article {
   padding: 20px;
   width: 80%;
   background-color:#FFE4E1;
-  height: 480px;
+  height: 490px;
 }
 
 section:after {
@@ -104,12 +104,9 @@ GolDar     :<select name="goldar" rows="1" cols="10"> <br>
 Hobby      :<input type="text"name="hobby"rows="1" cols="10"><br>
 Alamat     :<input type="text"name="alamat"rows="1" cols="10"><br>
 No HP      :<input type="text"name="phone"rows="1" cols="10"><br>
-
 </pre></form>
- <input type="submit" value="Submit"> <input type="Reset" value="Reset">
-
-  </article>
-</section>
+<input type="submit" value="Submit"> <input type="Reset" value="Reset">
+</article></section>
 
 <footer>
   <p>Media Sosial : </p>
