--- a/biodata.html
+++ b/biodata.html
@@ -72,7 +72,7 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html">Home<img src = 'image/hom.jpg' Border= "0" width = "80" height "30"/></a></li>
+      <li><a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "80" height "30"/></a></li>
       <li><a href="biodata.html">Biodata Penulis</a></li>
       <li><a href="form.html">Buat Lamaran</a></li>
 	  <li><a href="thanks.html">Ucapan Terimakasih</a></li>
