--- a/biodata.html
+++ b/biodata.html
@@ -73,9 +73,9 @@ footer {
   <nav>
     <ul>
       <li><a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "80" height "30"/></a></li>
-      <li><a href="biodata.html">Biodata Penulis</a></li>
-      <li><a href="form.html">Buat Lamaran</a></li>
-	  <li><a href="thanks.html">Ucapan Terimakasih</a></li>
+      <li><a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "80" height "30"</a></li>
+      <li><a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "80" height "30"</a></li>
+	  <li><a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "80" height "30"</a></li>
 	  <br>
 	  <h3>Video yang kusukai</h3>
 	  <video width="250" height="200" controls>
