--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ footer {
   <nav>
     <ul>
       <li><a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "80" height "30"/></a></li>
-      <li><a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "80" height "30"</a></li>
+      <a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "80" height "30"</a>
       <li><a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "80" height "30"</a></li>
-      <li><a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "80" height "30"</a></li>
+      <a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "80" height "30"</a>
     </ul>
   </nav>
   
