--- a/biodata.html
+++ b/biodata.html
@@ -72,10 +72,11 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "80" height "30"/></a></li>
+      <a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "80" height "30"/></a>
       <a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "80" height "30"</a>
-      <li><a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "80" height "30"</a></li>
+      <a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "80" height "30"</a>
       <a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "80" height "30"</a>
+	      </ul>
 	  <br>
 	  <h3>Video yang kusukai</h3>
 	  <video width="250" height="200" controls>
