--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ footer {
 <section>
   <nav>
     <ul>
-      <a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "80" height "30"/></a>
-      <a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "80" height "30"</a>
-      <a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "80" height "30"</a>
-      <a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "80" height "30"</a>
+      <li><a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "70" height "30"/></a></li>
+      <li><a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "70" height "30"</a></li>
+       <li><a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "70" height "30"</a></li>
+       <li><a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "70" height "30"</a></li>
     </ul>
   </nav>
   
