--- a/biodata.html
+++ b/biodata.html
@@ -55,10 +55,10 @@ footer {
   color: white;
 }
 
-@media (max-width: 600px) {
+(max-width: 600px) {
   nav, article {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
   }
 }
 </style>
@@ -76,13 +76,11 @@ footer {
       <li><a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "70" height "30"</a></li>
        <li><a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "70" height "30"</a></li>
        <li><a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "70" height "30"</a></li>
-	      </ul>
-	  <br>
+	  </ul><br>
 	  <h3>Video yang kusukai</h3>
 	  <video width="250" height="200" controls>
       <source src="dash.mp4" type="video/mp4">
-      </video>
-	  <br>
+      </video><br>
 	  <h3>Salah satu Video Youtube Saya</h3>
 	  <iframe width="250" height="200" src="https://www.youtube.com/embed/Y6jaVAECE_0" frameborder="0"
  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -96,7 +94,6 @@ telp/e-mail :<input type="text"name="phone"rows="1" cols="10">
 <input type="submit" value="Submit">
     </ul>
   </nav>
-  
   <article>
   
 <center>
@@ -130,7 +127,7 @@ alt = "image/oyen.jpg" width = "200" height "200"/>
 <center><pre>
   </article>
 </section>
-</body>	  
+
 <footer>
   <p>Media Sosial : </p>
   <a href = "https://www.youtube.com/channel/UCx26MnLsnsFPjJpVXHcn3jw"> <i> Youtube </i> </a><br></center>
@@ -140,4 +137,5 @@ Click me to display Date and Time.</button>
 <p id="demo"></p>
 
 </footer>
+</body>	  
 </html>
