--- a/biodata.html
+++ b/biodata.html
@@ -55,7 +55,7 @@ footer {
   color: white;
 }
 
-(max-width: 600px) {
+@media (max-width: 600px) {
   nav, article {
   width: 100%;
   height: auto;
