--- a/biodata.html
+++ b/biodata.html
@@ -72,25 +72,24 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html">Home<img src = 'image/hom.jpg' Border= "0" width = "80" height "30"/></a></li>
-      <li><a href="biodata.html">Biodata Penulis</a></li>
-      <li><a href="form.html">Buat Lamaran</a></li>
-	  <li><a href="thanks.html">Ucapan Terimakasih</a></li>
-	  <br>
+      <li><a href="index.html"><img src = 'image/hom.jpg' Border= "0" width = "70" height "30"/></a></li>
+      <li><a href="biodata.html"><img src = 'image/bio.jpg' Border= "0" width = "70" height "30"/></a></li>
+      <li><a href="form.html"><img src = 'image/daf.jpg' Border= "0" width = "70" height "30"/></a></li>
+      <li><a href="thanks.html"><img src = 'image/thx.jpg' Border= "0" width = "70" height "30"/></a></li>
+	       </ul><br>
 	  <h3>Video yang kusukai</h3>
 	  <video width="250" height="200" controls>
       <source src="dash.mp4" type="video/mp4">
-      </video>
-	  <br>
+      </video><br>
 	  <h3>Salah satu Video Youtube Saya</h3>
 	  <iframe width="250" height="200" src="https://www.youtube.com/embed/Y6jaVAECE_0" frameborder="0"
  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  <br>
  <h3 style="font-family:Monotype Corsiva;">Biodata Pengunjung Diisi ya:</h3>
 <form><pre>
-nama        :<input type="text"name="phone"size="30"max length="30"><br>
-Perusahaan  :<input type="text"name="secret"-word size="30"max length="30"><br>
-telp/e-mail :<input type="text"name="phone"size="30"max length="30"
+nama        :<input type="text"name="phone">width = "150" height "30"><br>
+Perusahaan  :<input type="text"name="secret"width = "150" height "30"><br>
+telp/e-mail :<input type="text"name="phone"width = "150" height "30">
 </pre></form>
 <input type="submit" value="Submit"> <input type="reset" value="Reset">
 </ul>
@@ -100,7 +99,7 @@ telp/e-mail :<input type="text"name="phone"size="30"max length="30"
   
 <center>
 <img src = "image/oyen.jpg"
-alt = "image/oyen.jpg" width = "350" height "200"/>
+alt = "image/oyen.jpg" width = "250" height "200"/>
 </center>
 
 <pre><i> <h4>
@@ -133,9 +132,7 @@ alt = "image/oyen.jpg" width = "350" height "200"/>
 			       <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
 </h4> </i> </pre>
 
-
 <center><pre>
-
   </article>
 </section>
 <footer>
@@ -144,7 +141,6 @@ alt = "image/oyen.jpg" width = "350" height "200"/>
   <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
-
 <p id="demo"></p>
 
 </footer>
