--- a/biodata.html
+++ b/biodata.html
@@ -22,7 +22,7 @@ header {
 }
 
 nav {
-  float: left;
+  float: right;
   width: 35%;
   height: 900px; 
   background:#F08080;
@@ -35,7 +35,7 @@ nav ul {
 }
 
 article {
-  float: left;
+  float: right;
   padding: 20px;
   width: 65%;
   background-color:#FFE4E1;
