--- a/biodata.html
+++ b/biodata.html
@@ -68,7 +68,6 @@ footer {
 <header>
   <h2>Biodata Penulis</h2>
 </header>
-
 <section>
   <nav>
     <ul>
@@ -84,10 +83,9 @@ footer {
 	  <h3>Salah satu Video Youtube Saya</h3>
 	  <iframe width="250" height="200" src="https://www.youtube.com/embed/Y6jaVAECE_0" frameborder="0"
  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- <br>
  <h3 style="font-family:Monotype Corsiva;">Biodata Pengunjung Diisi ya:</h3>
 <form><pre>
-nama        :<input type="text"name="phone">width = "150" height "30"><br>
+nama        :<input type="text"name="phone"width = "150" height "30"><br>
 Perusahaan  :<input type="text"name="secret"width = "150" height "30"><br>
 telp/e-mail :<input type="text"name="phone"width = "150" height "30">
 </pre></form>
