--- a/biodata.html
+++ b/biodata.html
@@ -75,19 +75,19 @@ footer {
       <li><a href="biodata.html"><img src = 'image/bio.jpg' Border= "0" width = "70" height "30"/></a></li>
       <li><a href="form.html"><img src = 'image/daf.jpg' Border= "0" width = "70" height "30"/></a></li>
       <li><a href="thanks.html"><img src = 'image/thx.jpg' Border= "0" width = "70" height "30"/></a></li>
-	       </ul><br>
+	       </ul>
 	  <h3>Video yang kusukai</h3>
 	  <video width="250" height="200" controls>
       <source src="dash.mp4" type="video/mp4">
-      </video><br>
+      </video>
 	  <h3>Salah satu Video Youtube Saya</h3>
 	  <iframe width="250" height="200" src="https://www.youtube.com/embed/Y6jaVAECE_0" frameborder="0"
  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  <h3 style="font-family:Monotype Corsiva;">Biodata Pengunjung Diisi ya:</h3>
 <form><pre>
-nama        :<input type="text"name="phone"width = "150" height "30"><br>
-Perusahaan  :<input type="text"name="secret"width = "150" height "30"><br>
-telp/e-mail :<input type="text"name="phone"width = "150" height "30">
+nama        :<input type="text"name="phone"width = "120" height "30"><br>
+Perusahaan  :<input type="text"name="secret"width = "120" height "30"><br>
+telp/e-mail :<input type="text"name="phone"width = "120" height "30">
 </pre></form>
 <input type="submit" value="Submit"> <input type="reset" value="Reset">
 </ul>
@@ -109,25 +109,23 @@ alt = "image/oyen.jpg" width = "250" height "200"/>
 6. Alamat     : Sungai Raya Dalam Asri, NO.A1<br>
 7. NO HP      : 085350625349<br>
 8. Organisasi :
-		- Pramuka : Siaga aktif
-		            Penggalang Terap
-		            Penegak Laksana
-		            Pradana Putri penegak
+   - Pramuka  : Siaga aktif
+	       Penggalang Terap
+	       Penegak Laksana
+	       Pradana Putri penegak
 					
-		- OSIS    : (Bidang Humas, Bendahara)
-		- HMI     : (Bendahara Umum)
+   - OSIS     : (Bidang Humas, Bendahara)
+   - HMI      : (Bendahara Umum)
 9. Pendidikan :
-		- SDN.01 Binjai Hulu
-		- SMPN.01 Binjai Hulu
-		- SMKS Muhammadiyah Sintang
+   - SDN.01 Binjai Hulu
+   - SMPN.01 Binjai Hulu
+   - SMKS Muhammadiyah Sintang
 10. Favorit    :
-	        - makanan    : ayam goreng 
-	        - minuman    : rasa cokelat
-	        - film       : Captain Marvel
-	        - komik Apps : Webtoon, Mangatoon, Webcomics,Ciayo
-	        - buku       : Novel Ther-Melian Academy all series	
-	        - lagu       : YUI-love & truth 
-			       <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
+    - makanan    : ayam goreng 
+    - minuman    : rasa cokelat
+    - film       : Captain Marvel	
+    - lagu       : YUI-love & truth 
+  <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
 </h4> </i> </pre>
 
 <center><pre>
