--- a/biodata.html
+++ b/biodata.html
@@ -105,9 +105,9 @@ alt = "image/oyen.jpg" width = "250" height "200"/>
 2. NIM        : D1041171009<br>
 3. TTL        : Binjai Hulu, 29-09-1999<br>
 4. Gender     : Perempuan<br>
-5. Hobby      : Eksperimen makanan,bernyanyi,membaca<br>
-6. Alamat     : Sungai Raya Dalam Asri, NO.A1<br>
-7. NO HP      : 085350625349<br>
+5. Hobby      : bernyanyi,membaca<br>
+6. Alamat     : Serdam Asri, NO.A1<br>
+7. NO HP      : 085350xxxxxx<br>
 8. Organisasi :
    - Pramuka  : Siaga aktif
 	       Penggalang Terap
@@ -121,10 +121,10 @@ alt = "image/oyen.jpg" width = "250" height "200"/>
    - SMPN.01 Binjai Hulu
    - SMKS Muhammadiyah Sintang
 10. Favorit    :
-    - makanan    : ayam goreng 
-    - minuman    : rasa cokelat
-    - film       : Captain Marvel	
-    - lagu       : YUI-love & truth 
+   - makanan    : ayam goreng 
+   - minuman    : rasa cokelat
+   - film       : Captain Marvel	
+   - lagu       : YUI-love & truth 
   <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
 </h4> </i> </pre>
 
