--- a/form.html
+++ b/form.html
@@ -22,9 +22,9 @@ header {
 }
 
 nav {
-  float: right;
+  float: left;
   width: 20%;
-  height: 490px; 
+  height: 430px; 
   background:#F08080;
   padding: 20px;
 }
@@ -35,11 +35,11 @@ nav ul {
 }
 
 article {
-  float: right;
+  float: left;
   padding: 20px;
   width: 80%;
   background-color:#FFE4E1;
-  height: 490px;
+  height: 430px;
 }
 
 section:after {
@@ -78,37 +78,36 @@ footer {
        <li><a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "70" height "30"</a></li>
     </ul>
   </nav>
-  
   <article>
 <form><pre>
-Nama       :<input type="text"name="nama"rows="1" cols="10"><br>
-NIK        :<input type="text"name="nim" rows="1" cols="10"><br>
-TTL        :<input type="date"name="ttl"><br>
-Gender     :<input type="radio"name="gender"value="gender 1">Pria
-            <input type="radio"name="gender"value="gender 2">wanita
+Nama      :<input type="text"name="nama"rows="1" cols="10"><br>
+NIK       :<input type="text"name="nim" rows="1" cols="10"><br>
+TTL       :<input type="date"name="ttl"><br>
+Gender    :<input type="radio"name="gender"value="gender 1">Pria
+           <input type="radio"name="gender"value="gender 2">wanita
 Pendidikan 
-Terakhir   :<select name="pend" rows="1" cols="10"><br>
-            <option value="1">SMP/Sederajat</option>
-            <option value="2">SMA/Sederajat</option>
-            <option value="3">D3</option>
-            <option value="4">D4/S1</option>
-	    <option value="5">S2</option>
-            </select> 
+Terakhir  :<select name="pend" rows="1" cols="10"><br>
+           <option value="1">SMP/Sederajat</option>
+           <option value="2">SMA/Sederajat</option>
+           <option value="3">D3</option>
+           <option value="4">D4/S1</option>
+	       <option value="5">S2</option>
+           </select> 
 
-GolDar     :<select name="goldar" rows="1" cols="10"> <br>
-            <option value=" A ">A</option>
-            <option value=" B ">B</option>
-            <option value=" AB ">AB</option>
-            <option value=" O ">O</option>
-            </select>
-Hobby      :<input type="text"name="hobby"rows="1" cols="10"><br>
-Alamat     :<input type="text"name="alamat"rows="1" cols="10"><br>
-No HP      :<input type="text"name="phone"rows="1" cols="10"><br>
+GolDar    :<select name="goldar" rows="1" cols="10"> <br>
+           <option value=" A ">A</option>
+           <option value=" B ">B</option>
+           <option value=" AB ">AB</option>
+           <option value=" O ">O</option>
+           </select>
+Hobby     :<input type="text"name="hobby"rows="1" cols="10"><br>
+Alamat    :<input type="text"name="alamat"rows="1" cols="10"><br>
+No HP     :<input type="text"name="phone"rows="1" cols="10"><br>
 
-<input type="submit" value="Submit"> <input type="Reset" value="Reset">
 </pre></form>
-</article></section>
-
+ <input type="submit" value="Submit"> <input type="Reset" value="Reset">
+  </article>
+</section>
 <footer>
   <p>Media Sosial : </p>
   <a href = "https://www.youtube.com/channel/UCx26MnLsnsFPjJpVXHcn3jw"> <i> Youtube </i> </a><br></center>
@@ -118,6 +117,5 @@ Click me to display Date and Time.</button>
 
 <p id="demo"></p>
 </footer>
-
 </body>
 </html>
