--- a/thanks.html
+++ b/thanks.html
@@ -22,7 +22,7 @@ header {
 }
 
 nav {
-  float: right;
+  float: left;
   width: 20%;
   height: 310px; 
   background:#F08080;
@@ -35,7 +35,7 @@ nav ul {
 }
 
 article {
-  float: right;
+  float: left;
   padding: 20px;
   width: 80%;
   background-color:#FFE4E1;
@@ -84,10 +84,13 @@ footer {
 <img src = "image/thanks.jpg"
 alt = "image/thanks.jpg" width = "250" height "200"/>
 </center>
-
+<center><pre>
 <h3 style="font-family:Monotype Corsiva;">Terimakasih sudah berkunjung kesini ya,
-jangan lupa hubungi kontak saya apabila ada pekerjaan yang cocok untuk saya.</h3>
+jangan lupa hubungi kontak saya apabila ada pekerjaan yang cocok untuk saya.
+</h3></pre>
 <marquee> <b><h3 style="font-family:Monotype Corsiva;">Thankyou :)</h3> </b> </marquee>
+<center>
+
   </article>
 </section>
 
