--- a/biodata.html
+++ b/biodata.html
@@ -71,11 +71,10 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html"><img src = 'image/hom.jpg' Border= "0" width = "70" height "30"/></a></li>
-      <li><a href="biodata.html"><img src = 'image/bio.jpg' Border= "0" width = "70" height "30"/></a></li>
-      <li><a href="form.html"><img src = 'image/daf.jpg' Border= "0" width = "70" height "30"/></a></li>
-      <li><a href="thanks.html"><img src = 'image/thx.jpg' Border= "0" width = "70" height "30"/></a></li>
-	       </ul>
+      <li><a href="index.html"><img src = "image/hom.jpg" width = "70" height "30"</a></li>
+      <li><a href="biodata.html"><img src = "image/bio.jpg"  width = "70" height "30"</a></li>
+      <li><a href="form.html"><img src = "image/daf.jpg" width = "70" height "30"</a></li>
+      </ul>
 	  <h3>Video yang kusukai</h3>
 	  <video width="250" height="200" controls>
       <source src="dash.mp4" type="video/mp4">
