--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@ header {
 }
 
 nav {
-  float: left;
+  float: right;
   width: 20%;
   height: 430px; 
   background:#F08080;
@@ -35,7 +35,7 @@ nav ul {
 }
 
 article {
-  float: left;
+  float: right;
   padding: 20px;
   width: 80%;
   background-color:#FFE4E1;
@@ -72,10 +72,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "70" height "30"/></a></li>
-      <li><a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "70" height "30"</a></li>
-       <li><a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "70" height "30"</a></li>
-       <li><a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "70" height "30"</a></li>
+      <li><a href="index.html"><img src = "image/hom.jpg" width = "70" height "30"</a></li>
+      <li><a href="biodata.html"><img src = "image/bio.jpg" width = "70" height "30"</a></li>
+       <li><a href="form.html"><img src = "image/daf.jpg" width = "70" height "30"</a></li>
     </ul>
   </nav>
   <article>
