--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ header {
   color: white;
 }
 nav {
-  float: left;
+  float: right;
   width: 20%;
   height: 360px; 
   background:#F08080;
@@ -30,7 +30,7 @@ nav ul {
   padding: 0;
 }
 article {
-  float: left;
+  float: right;
   padding: 20px;
   width: 80%;
   background-color:#FFE4E1;
@@ -64,10 +64,10 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html"><img src = "image/hom.jpg" Border= "0" width = "70" height "30"/></a></li>
-      <li><a href="biodata.html"><img src = "image/bio.jpg" Border= "0" width = "70" height "30"</a></li>
-       <li><a href="form.html"><img src = "image/daf.jpg" Border= "0" width = "70" height "30"</a></li>
-       <li><a href="thanks.html"><img src = "image/thx.jpg" Border= "0" width = "70" height "30"</a></li>
+      <li><a href="index.html"><img src = "image/hom.jpg" width = "70" height "30"</a></li>
+      <li><a href="biodata.html"><img src = "image/bio.jpg" width = "70" height "30"</a></li>
+       <li><a href="form.html"><img src = "image/daf.jpg"  width = "70" height "30"</a></li>
+       <li><a href="thanks.html"><img src = "image/thx.jpg"  width = "70" height "30"</a></li>
     </ul>
   </nav>
   
