--- a/biodata.html
+++ b/biodata.html
@@ -71,9 +71,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html"><img src = "image/hom.jpg" width = "70" height "30"</a></li>
-      <li><a href="biodata.html"><img src = "image/bio.jpg"  width = "70" height "30"</a></li>
-      <li><a href="form.html"><img src = "image/daf.jpg" width = "70" height "30"</a></li>
+      <li><a href="index.html"><img src = 'image/hom.jpg' width = "70" height "30"</a></li>
+      <li><a href="biodata.html"><img src = 'image/bio.jpg'  width = "70" height "30"</a></li>
+      <li><a href="form.html"><img src = 'image/daf.jpg' width = "70" height "30"</a></li>
       </ul>
 	  <h3>Video yang kusukai</h3>
 	  <video width="250" height="200" controls>
