--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html"><img src = "image/hom.jpg" width = "70" height "30"</a></li>
-      <li><a href="biodata.html"><img src = "image/bio.jpg" width = "70" height "30"</a></li>
-       <li><a href="form.html"><img src = "image/daf.jpg"  width = "70" height "30"</a></li>
-       <li><a href="thanks.html"><img src = "image/thx.jpg"  width = "70" height "30"</a></li>
+      <li><a href="index.html"><img src = 'image/hom.jpg' width = "70" height "30"</a></li>
+      <li><a href="biodata.html"><img src = 'image/bio.jpg' width = "70" height "30"</a></li>
+       <li><a href="form.html"><img src = 'image/daf.jpg'  width = "70" height "30"</a></li>
+
     </ul>
   </nav>
   
