--- a/form.html
+++ b/form.html
@@ -72,9 +72,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="index.html"><img src = 'image/hom.jpg' width = "70" height "30"</a></li>
-      <li><a href="biodata.html"><img src = 'image/bio.jpg' width = "70" height "30"</a></li>
-       <li><a href="form.html"><img src = 'image/daf.jpg' width = "70" height "30"</a></li>
+      <li><a href="index.html"><img src = 'image/hom.jpg' Border= "0" width = "70" height "30"/></a></li>
+      <li><a href="biodata.html"><img src = 'image/bio.jpg' Border= "0" width = "70" height "30"/></a></li>
+      <li><a href="form.html"><img src = 'image/daf.jpg' Border= "0" width = "70" height "30"/></a></li>
     </ul>
   </nav>
   <article>
