--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ footer {
       <li><a href="index.html"><img src = 'image/hom.jpg' Border= "0" width = "70" height "30"/></a></li>
       <li><a href="biodata.html"><img src = 'image/bio.jpg' Border= "0" width = "70" height "30"/></a></li>
       <li><a href="form.html"><img src = 'image/daf.jpg' Border= "0" width = "70" height "30"/></a></li>
+      <li><a href="thanks.html"><img src = 'image/thx.jpg' Border= "0" width = "70" height "30"/></a></li>
     </ul>
   </nav>
   
@@ -79,8 +80,8 @@ alt = "image/mohon.gif" width = "250" height "200"/>
 <b style="font-family:Monotype Corsiva;">Assalamualaikum wr.wb
 Nama saya Rika Hariyanti, saya adalah mahasiswi prodi Informatika di Universitas Tanjungpura.
 Saat ini saya sedang memerlukan pekerjaan paruh waktu untuk mengisi waktu saya selain kuliah.
-Untuk CV saya lebih lanjut bisa klik menu biodata penulis dan untuk pembaca yang sedang 
-mencari kerja dapat memasukkan Cv nya dengan klik menu buat lamaran.</b>
+Untuk CV saya lebih lanjut bisa klik menu biodata dan untuk pembaca yang sedang 
+mencari kerja dapat memasukkan Cv nya dengan klik menu daftar.</b>
   </article>
 </section>
 
