--- a/form.html
+++ b/form.html
@@ -75,13 +75,14 @@ footer {
       <li><a href="index.html"><img src = 'image/hom.jpg' Border= "0" width = "70" height "30"/></a></li>
       <li><a href="biodata.html"><img src = 'image/bio.jpg' Border= "0" width = "70" height "30"/></a></li>
       <li><a href="form.html"><img src = 'image/daf.jpg' Border= "0" width = "70" height "30"/></a></li>
+      <li><a href="thanks.html"><img src = 'image/thx.jpg' Border= "0" width = "70" height "30"/></a></li>
     </ul>
   </nav>
   <article>
 <form><pre>
 Nama      :<input type="text"name="nama"rows="1" cols="10"><br>
 NIK       :<input type="text"name="nim" rows="1" cols="10"><br>
-TTL       :<input type="date"name="ttl"><br>
+TTL       :<input type="date"name="ttl"rows="1" cols="10"><br>
 Gender    :<input type="radio"name="gender"value="gender 1">Pria
            <input type="radio"name="gender"value="gender 2">wanita
 Pendidikan 
