--- a/biodata.html
+++ b/biodata.html
@@ -85,9 +85,9 @@ footer {
  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  <h3 style="font-family:Monotype Corsiva;">Biodata Pengunjung Diisi ya:</h3>
 <form><pre>
-nama        :<input type="text"name="phone"width = "110" height "30"><br>
-Perusahaan  :<input type="text"name="secret"width = "110" height "30"><br>
-telp/e-mail :<input type="text"name="phone"width = "110" height "30">
+nama       :<input type="text"name="phone"width = "100" height "30"><br>
+Perusahaan :<input type="text"name="secret"width = "100" height "30"><br>
+e-mail     :<input type="text"name="phone"width = "100" height "30">
 </pre></form>
 <input type="submit" value="Submit"> <input type="reset" value="Reset">
 </ul>
@@ -105,14 +105,14 @@ alt = "image/oyen.jpg" width = "250" height "200"/>
 2. NIM        : D1041171009<br>
 3. TTL        : Binjai Hulu, 29-09-1999<br>
 4. Gender     : Perempuan<br>
-5. Hobby      : bernyanyi,membaca<br>
+5. Hobby      : Masak & bernyanyi<br>
 6. Alamat     : Serdam Asri, NO.A1<br>
 7. NO HP      : 085350xxxxxx<br>
 8. Organisasi :
    - Pramuka  : Siaga aktif
-	       Penggalang Terap
-	       Penegak Laksana
-	       Pradana Putri penegak
+	        Penggalang Terap
+	        Penegak Laksana
+	        Pradana Putri penegak
 					
    - OSIS     : (Bidang Humas, Bendahara)
    - HMI      : (Bendahara Umum)
@@ -121,10 +121,10 @@ alt = "image/oyen.jpg" width = "250" height "200"/>
    - SMPN.01 Binjai Hulu
    - SMKS Muhammadiyah Sintang
 10. Favorit    :
-   - makanan    : ayam goreng 
-   - minuman    : rasa cokelat
-   - film       : Captain Marvel	
-   - lagu       : YUI-love & truth 
+   - makanan   : ayam goreng 
+   - minuman   : rasa cokelat
+   - film      : Captain Marvel	
+   - lagu      : YUI-love & truth 
   <audio controls><source src="yui.mp3" type="audio/mpeg"></audio> 			
 </h4> </i> </pre>
 
